[package]
name = "lzn"
version = "0.1.0"
authors = ["Nam Jeonghyun <ska827@snu.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lzn"
doc = false

[lib]
name = "lzn"
path = "src/lib.rs"

[dependencies]
image = { version = "0.22", default-features = false, features = ["jpeg", "png_codec"] }
glob = "0.3.0"
structopt = { version = "0.3.4", default-features = false }
log = "0.4.8"
env_logger = "0.7.1"
dirs = "2.0"
zip = "0.5.3"
chrono = {version = "0.4.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"
derive_builder = "0.9.0"
encoding = "0.2.33"
err-derive = "0.2.1"
diesel = { version = "1.4", default-features = false, features = ["sqlite", "chrono"] }

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "merge"
harness = false

[profile.release]
debug = true