[package]
authors = ["Nam Jeonghyun <ska827@snu.ac.kr>"]
edition = "2018"
name = "lzn"
version = "0.2.0"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
doc = false
name = "lzn"

[lib]
name = "lzn"
path = "src/lib.rs"

[features]
default = []

# merge subcommand
merge = ["image", "glob"]

# migrate subcommand
migrate = []

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
base64 = "0.13.0"
bincode = "1.2"
chrono = {version = "0.4.9", features = ["serde"]}
derive_builder = "0.10.2"
diesel = {version = "1.4", default-features = false, features = ["sqlite", "chrono"]}
diesel_migrations = "1.4.0"
dirs = "3.0.2"
encoding = "0.2.33"
env_logger = "0.9.0"
err-derive = "0.3.0"
glob = {version = "0.3.0", optional = true}
image = {version = "0.23.14", default-features = false, features = ["jpeg", "png"], optional = true}
log = "0.4.8"
select = "0.5.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
structopt = {version = "0.3.4", default-features = false}
tiny_http = "0.8.2"
ureq = {version = "2.1.1", features = ["json"]}
url = "2.1"
zip = "0.5.3"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
harness = false
name = "merge"

[profile.release]
debug = true
lto = true
